# ZoomFT

./: .gitignore  main.py  pyproject.toml  readme.md  readme.txt
website/: \  __init__.py  auth.py  constants.py  csv  datatypes.py  generateFakeData.py  interfacing.py  managers.py  random  views.py
website/FakeInfo/: FakeGames.csv  FakeUsers.csv  Tags.csv
website/SQL/: create.sql
website/templates/: base.html  createAccount.html  gamePage.html  games.html  login.html  logout.html  profile.html  settings.html  users.html
