[build-system]
requires = ["pip"]

[project]
authors = [{name="Christian"}]
name = "ZoomFront"
version = "1.0.0"
description = "Fake steam-style storefront that interfaces with an SQL database"
readme = "readme.md"

dependencies = [
    "Flask",
    "mysql-connector-python"
]

requires-python = ">=3.8"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python"
]


